<resources>
    <string name="app_name">HomeGame</string>
    <string name="email">Digite seu e-mail</string>
    <string name="senha">Digite sua senha</string>
    <string name="logar">Logar</string>
    <string name="cadastro_novo">Não tem conta? Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirme_senha">Confirme sua senha</string>
    <string name="avancar">AVANÇAR</string>
    <string name="cep">Cep</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="complemento">Complemento</string>
    <string name="contato">Contato</string>
    <string name="endereco">Endereço</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="concluir_cadastro">CONCLUIR CADASTRO</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nome_home">"Nome"</string>
    <string name="estado_home">"Estado"</string>
    <string name="icone">"icone"</string>

</resources>